# routes/app_routes.js
@@ -1,5 +1,6 @@
 const BarbersController = require('../controllers/BarbersController.js')
-const customerController = require('../controllers/customersController.js');
+const customersController = require('../controllers/customersController.js');
+const bookingsController = require('../controllers/bookingsController.js');
 
 module.exports = (app) => {
     app.route("/barbers")
@@ -12,10 +13,17 @@ module.exports = (app) => {
     app.route('/customers')
         .get(customersController.getAll)
         .post(customersController.createNew) //Create */
-        app.route("/customers/:id_customer")
+    app.route("/customers/:id_customer")
         .get(customersController.getById) //Read
         .put(customersController.updateById)  //Update
         .delete(customersController.deleteById)  //Delete
+    app.route('/bookings')
+        .get(bookingsController.getAll)
+        .post(bookingsController.createNew) //Create
+    app.route("/bookings/:id_booking")
+        .get(bookingsController.getById)  //Read
+        .put(bookingsController.updateById)  //Update
+        .delete(bookingsController.deleteById)  //Delete 
 
 }
 
